Implemented edge for is-a relationships only.